evm compiled sucess

--- a/omnichain-identity/evm-contracts/package.json
+++ b/omnichain-identity/evm-contracts/package.json
@@ -16,14 +16,21 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
+    "@typechain/ethers-v6": "^0.4.0",
+    "@typechain/hardhat": "^8.0.0",
+    "@types/mocha": "^10.0.10",
     "chai": "^4.3.7",
     "dotenv": "^16.3.1",
     "hardhat": "^2.17.1",
     "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.8.1"
+    "solidity-coverage": "^0.8.1",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.2.0",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@layerzerolabs/lz-evm-v1-0.7": "^2.0.0",
+    "@layerzerolabs/lz-evm-protocol-v2": "^3.0.106",
+    "@layerzerolabs/oapp-evm": "^0.3.2",
     "@openzeppelin/contracts": "^4.9.3",
     "ethers": "^6.7.0"
   }
