--- a/omnichain-identity/app/package.json
+++ b/omnichain-identity/app/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
+    "@project-serum/anchor": "^0.26.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.26",
     "@solana/web3.js": "^1.87.6",
+    "borsh": "^2.0.0",
+    "buffer": "^6.0.3",
     "ethers": "^6.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
