--- a/omnichain-identity/evm-contracts/.env.example
+++ b/omnichain-identity/evm-contracts/.env.example
@@ -3,10 +3,13 @@ ETHEREUM_RPC_URL=your_ethereum_rpc_url_here
 POLYGON_RPC_URL=your_polygon_rpc_url_here
 BSC_RPC_URL=your_bsc_rpc_url_here
 
-# LayerZero Endpoints for Testnet
+# LayerZero V2 Endpoints for Testnet
 LZ_ETHEREUM_ENDPOINT=0x6098e96a28E02f27B1e6BD381FD8618D8a3621a0
 LZ_POLYGON_ENDPOINT=0x6098e96a28E02f27B1e6BD381FD8618D8a3621a0
 LZ_BSC_ENDPOINT=0x6098e96a28E02f27B1e6BD381FD8618D8a3621a0
 
-# Solana LayerZero OApp address (after deployment)
-SOLANA_OAPP_ADDRESS=your_deployed_solana_program_address
+# After deploying your contract, add its address here
+IDENTITY_LINKER_ADDRESS=your_deployed_contract_address
+
+# Solana LayerZero OApp address (already deployed)
+SOLANA_OAPP_ADDRESS=DDyBRUnarV5xAdTn3XmjbhEGuiinCBRLT1tGkc33f5Fz
