--- a/omnichain-identity/evm-contracts/package.json
+++ b/omnichain-identity/evm-contracts/package.json
@@ -35,6 +35,7 @@
     "@layerzerolabs/oapp-evm": "^0.3.2",
     "@layerzerolabs/toolbox-hardhat": "^0.6.11",
     "@openzeppelin/contracts": "^4.9.3",
-    "ethers": "^6.7.0"
+    "ethers": "^6.7.0",
+    "solidity-bytes-utils": "^0.8.4"
   }
 }
