--- a/omnichain-identity/evm-contracts/package.json
+++ b/omnichain-identity/evm-contracts/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "compile": "hardhat compile",
     "test": "hardhat test",
-    "deploy": "hardhat run scripts/deploy.js --network"
+    "deploy": "hardhat run scripts/deploy.js --network",
+    "lz:deploy": "hardhat lz:deploy",
+    "lz:wire": "hardhat lz:oapp:wire --oapp-config layerzero.config.ts",
+    "lz:config:init": "hardhat lz:oapp:config:init --oapp-config layerzero.config.ts",
+    "lz:config:get": "hardhat lz:oapp:config:get --oapp-config layerzero.config.ts"
   },
   "author": "",
   "license": "MIT",
@@ -17,12 +21,14 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "@types/mocha": "^10.0.10",
     "chai": "^4.3.7",
     "dotenv": "^16.3.1",
     "hardhat": "^2.17.1",
+    "hardhat-deploy": "^0.12.1",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.1",
     "ts-node": "^10.9.2",
@@ -30,12 +36,13 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@layerzerolabs/lz-definitions": "^3.0.106",
-    "@layerzerolabs/lz-evm-protocol-v2": "^3.0.106",
-    "@layerzerolabs/oapp-evm": "^0.3.2",
-    "@layerzerolabs/toolbox-hardhat": "^0.6.11",
+    "@layerzerolabs/lz-definitions": "^2.3.0",
+    "@layerzerolabs/lz-evm-protocol-v2": "^2.3.0",
+    "@layerzerolabs/oapp-evm": "^0.0.4",
+    "@layerzerolabs/toolbox-hardhat": "^0.2.24",
     "@openzeppelin/contracts": "^4.9.3",
-    "ethers": "^6.7.0",
+    "bs58": "^6.0.0",
+    "ethers": "^5.7.2",
     "solidity-bytes-utils": "^0.8.4"
   }
 }
